# heya

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Dockerfile  LICENSE  README-zh.md  README.md  docker-compose.yml  heya.spec  mkdocs.yml  pyinstaller.toml  pyproject.toml
.github/workflows/: publish.yml
docs/: index.md
heya/: __init__.py  __main__.py
heya/app/: README.md  __init__.py  __main__.py  app.py
heya/app/components/: __init__.py  converter.py  markdown_converter.py  pdf_to_word.py  settings_panel.py  tips.py  wechat.py
heya/app/core/: __init__.py  component.py  main_window.py  registry.py
heya/app/handlers/: __init__.py  error_handler.py
heya/app/i18n/: __init__.py
heya/app/services/: __init__.py  service.py
heya/application/: __init__.py  converters.py  ports.py  wechat_converter.py
heya/cli/: options.py  utils.py
heya/cli/commands/: __init__.py  web.py  wechat.py
heya/cmd/: __init__.py
heya/cmd/commands/: __init__.py  html2pdf.py  md2pdf.py  pdf2word.py  wechat2pdf.py
heya/core/: __init__.py  helpers.py
heya/core/browser/: __init__.py  browser_pool.py  constants.py  playwright_browser.py  pool_constants.py  scroll_constants.py
heya/core/cache/: __init__.py  cache.py
heya/core/config/: __init__.py  loader.py  models.py
heya/core/converters/: __init__.py  converters.py  html_converter_factory.py
heya/core/exceptions/: __init__.py  exceptions.py
heya/core/interfaces/: __init__.py  interfaces.py
heya/core/logging/: __init__.py  errors.py
heya/core/markdown/: __init__.py  converter_factory.py  markdown_processor.py
heya/core/models/: __init__.py  convert_result.py  pdf_content.py  quality.py
heya/core/pdf/: __init__.py  compression.py  pdf_compressor.py  pdf_merger.py  pdf_to_word.py  pypdf_writer.py
heya/core/performance/: __init__.py  performance.py
heya/core/stream_converters/: __init__.py  base.py  batch_converter.py  html_converter.py  markdown_converter.py  wechat_converter.py
heya/core/temp/: __init__.py  constants.py  temp.py
heya/core/template/: __init__.py
heya/core/wechat/: __init__.py  converter_factory.py  parser.py  wechat_converter.py
heya/domain/: __init__.py
heya/domain/services/: __init__.py  compression.py
heya/infrastructure/: __init__.py
heya/infrastructure/browser/: __init__.py  browser_pool.py  playwright_browser.py
heya/infrastructure/markdown/: __init__.py  markdown_processor.py
heya/infrastructure/pdf/: __init__.py  pdf_compressor.py  pdf_merger.py  pypdf_writer.py
heya/infrastructure/template/: html_template.py
heya/infrastructure/wechat/: __init__.py  parser.py
heya/pdf/: _html.py  compress.py  converter.py
heya/shared/: __init__.py  cache.py  constants.py  errors.py  logging.py  performance.py  temp.py
heya/shared/config/: __init__.py  loader.py
heya/web/: __init__.py  app.py  handler.py  merge_utils.py  service.py  styles.css
heya/web/components/: __init__.py  converter.py  pdf_to_word.py  settings.py  settings_panel.py  tips.py  wechat.py
heya/web/config/: __init__.py  constants.py
heya/web/converters/: __init__.py  base.py  batch_converter.py  html_converter.py  markdown_converter.py  wechat_converter.py
tests/: conftest.py  test_config.py  test_converters.py  test_exceptions.py  test_models.py  test_ports.py  test_temp.py  test_templates.py  test_web_components.py
(+19 files in other folders)
