[project]
name = "heya"
version = "0.0.2"
description = "heya is html, markdown to pdf tools"
authors = [
    {name = "zkep", email="zkeper@foxmail.com"},
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "playwright>=1.48.0",
    "markdown>=3.5.0",
    "pypdf>=4.0.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
ui = ["gradio>=4.0.0"]


[project.scripts]
heya = "heya.__main__:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
extend-exclude = [
    "docs/*",
]
fix = true
line-length = 88
target-version = "py311"

[tool.ruff.lint.isort]
force-single-line = true
lines-between-types = 1
lines-after-imports = 2
known-first-party = ["heya"]
required-imports = ["from __future__ import annotations"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = "pdf2docx"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "playwright.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "gradio.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "reportlab.*"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "types-PyYAML>=6.0.0",
    "types-Markdown>=3.6.0",
]
